2006-08-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-duplicate.c (gimp_image_duplicate)
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): a
	somewhat hackish implementation of what's suggested in bug #353246.
	Let the save dialog default to the folder of the duplicated image.

2006-08-29  Sven Neumann  <sven@gimp.org>

	* app/display/gimpnavigationeditor.c: some adjustments to the fix
	for bug #346880.

2006-08-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerview.[ch]: made set_context() a
	virtual function of the GimpContainerView interface.

2006-08-28  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptextoptions.[ch]
	* app/tools/gimptexttool.c
	* app/widgets/gimptexteditor.[ch]: make the text editor transient
	to the display shell.

2006-08-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppdbdialog.c (gimp_pdb_dialog_run_callback):
	gimp_show_message_dialog() takes a GtkWidget, cast the dialog
	variable accordingly.

2006-08-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c: avoid crashing on newer versions of
	the winicon file format (bug #352899).

2006-08-28  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpairbrushtool.c
	* app/tools/gimpalignoptions.c
	* app/tools/gimpblendoptions.c
	* app/tools/gimpbucketfilloptions.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpcolorpickeroptions.c
	* app/tools/gimpconvolvetool.c
	* app/tools/gimpcropoptions.c
	* app/tools/gimpdodgeburntool.c
	* app/tools/gimperasertool.c
	* app/tools/gimpflipoptions.c
	* app/tools/gimphistogramoptions.c
	* app/tools/gimpinkoptions-gui.c
	* app/tools/gimpmagnifyoptions.c
	* app/tools/gimpmeasureoptions.c
	* app/tools/gimpmoveoptions.c
	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangleselectoptions.c
	* app/tools/gimpsmudgetool.c
	* app/tools/gimptextoptions.c
	* app/tools/gimptransformoptions.c
	* app/tools/gimpvectoroptions.c: code cleanup.
