@@ -1,5 +1,10 @@
 2006-08-29  Sven Neumann  <sven@gimp.org>
 
+	* app/plug-in/gimpplugin.c (gimp_plug_in_recv_message): use
+	gimp_message() if a plug-in crashes.
+
+2006-08-29  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage-duplicate.c (gimp_image_duplicate)
 	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): a
 	somewhat hackish implementation of what's suggested in bug #353246.
